--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -43,7 +43,9 @@
                                     <td>
                                         <a href="/post/<%= post.slug %>" class="btn btn-success btn-sm">View</a>
                                         <a href="/edit-post/<%= post._id %>" class="btn btn-primary btn-sm">Edit</a>
-                                        <a href="/edit-post/<%= post._id %>" class="btn btn-danger btn-sm">Delete</a>
+                                        <form action="/delete-post/<%= post._id %>" method="post" class="d-inline">
+                                            <button type="submit" class="btn btn-danger btn-sm">Delete</button>
+                                        </form>
                                     </td>
                                 </tr>
                             <% }) %>
