--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,55 +1,30 @@
 <%- include('partials/header.ejs') %>
     <div class="container">
         <div class="row g-4">
-            <div class="col-lg-6">
-                <div class="card shadow">
-                    <img src="https://images3.alphacoders.com/135/1350069.jpeg" class="img-fluid card-img-top" alt="walpaper">
-                    <div class="card-body p-4">
-                        <h1 class="text-secondary fw-bold">
-                            Title
-                        </h1>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, est non animi saepe
-                            itaque accusamus beatae dicta, laboriosam odit quisquam, aperiam quia similique quae
-                            illo ab ipsam eum repellat fugit!
-                        </p>
-                        <div>
-                            <a href="/post/123" class="btn btn-primary btb-sm">Read more</a>
+            <% posts.forEach(post => {%>
+                <div class="col-lg-6">
+                    <div class="card shadow">
+                        <img src="/uploads/<%= post.image %>" class="img-fluid card-img-top" alt="walpaper">
+                        <div class="card-body p-4">
+                            <h1 class="text-secondary fw-bold">
+                                <%= post.title %>
+                            </h1>
+                            <p class="card-text">
+                                <%= post.content.substring(0,200) %>...
+                            </p>
+                            <div>
+                                <a href="/post/<%= post.slug %>" class="btn btn-primary btb-sm">Read more</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div>Auth: Mark Zuckerberg</div>
-                            <div>Created: 11-23-2024</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-6">
-                <div class="card shadow">
-                    <img src="https://images3.alphacoders.com/135/1350069.jpeg" class="img-fluid card-img-top" alt="walpaper">
-                    <div class="card-body p-4">
-                        <h1 class="text-secondary fw-bold">
-                            Title
-                        </h1>
-                        <p class="card-text">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, est non animi saepe
-                            itaque accusamus beatae dicta, laboriosam odit quisquam, aperiam quia similique quae
-                            illo ab ipsam eum repellat fugit!
-                        </p>
-                        <div>
-                            <a href="/post/123" class="btn btn-primary btb-sm">Read more</a>
-                        </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="d-flex justify-content-between align-items-center">
-                            <div>Auth: Mark Zuckerberg</div>
-                            <div>Created: 11-23-2024</div>
+                        <div class="card-footer">
+                            <div class="d-flex justify-content-between align-items-center">
+                                <div>Auth: <%= post.user.name %></div>
+                                <div>Created: <%= post.createdAt.toLocaleDateString() %></div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-
+            <%}) %>
             
         </div>
     </div>
