--- a/views/index.ejs
+++ b/views/index.ejs
@@ -25,7 +25,22 @@
                     </div>
                 </div>
             <%}) %>
-            
+        </div>
+
+        <div class="my-4 float-end d-inline-flex align-items-center gap-4">
+            <% if (pagination.hasPrevPage) {%>
+                <div>
+                    <a href="/?page=<%= pagination.prevPage %>" class="btn btn-secondary">Previous</a>
+                </div>
+            <%} %>
+
+            <span>Page <%= pagination.currentPage %> of <%= pagination.totalPage %> </span>
+
+            <% if (pagination.hasNextPage) {%>
+                <div>
+                    <a href="/?page=<%= pagination.nextPage %>" class="btn btn-secondary">Next</a>
+                </div>
+            <%} %>
         </div>
     </div>
 <%- include('partials/footer.ejs') %>
